<resources>
    <!-- HomeWork1 -->
    <string name="text_view">Text 1</string>
    <string name="hello_world">Text 2</string>
    <string name="ok_button">Button</string>

    <!-- ClassWork2 -->
    <string name="dz1">DZ1</string>
    <string name="name">Name</string>
    <string name="button">Login</string>
    <string name="cw2">cw2</string>
    <string name="cw3">cw3</string>
    <string name="dz2">dz2</string>
    <string name="hw3">hw3</string>
    <string name="hw4">hw4</string>
    <string name="hw5">hw5</string>
    <string name="hw6">hw6</string>
    <string name="cw6">cw6</string>
    <string name="cw7">cw7</string>
    <string name="cw8">cw8</string>
    <string name="cw9">cw9</string>
    <string name="cw12">cw12</string>
    <string name="cw13">cw13</string>
    <string name="hw14">hw14</string>
    <string name="hw7">hw7</string>
    <string name="hw9">hw9</string>
    <string name="hw10">hw10</string>
    <string name="hw11">hw11</string>
    <string name="hw13">hw13</string>
    <string name="hw15">hw15</string>
    <string name="cw14">cw14</string>
    <string name="cw16">cw16</string>
    <string name="cw18">cw18</string>
    <string name="cw21">cw21</string>
    <string name="url">https://goo.gl/oaZVyX</string>
    <string name="strangebutton">strangeButton</string>
    <string name="cw4">cw4</string>
    <string name="cw5">cw5</string>
    <string name="clocks">Clocks</string>

    <!--HomeWork7-->
    <string name="female">Женщина</string>
    <string name="male">Мужчина</string>
    <string name="title_activity_maps">Map</string>


</resources>
